care-australia-uat/force-app/main/default/objects/Donor_Public_Engagement__c/Donor_Public_Engagement__c.object-meta.xml
<CustomObject>
    <label>Donor Public Engagement</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Donor Public Engagement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Donor Public Engagements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>