care-australia-uat/force-app/main/default/objects/Donor_Public_Engagement__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Donor Public Engagements</relationshipLabel>
    <relationshipName>Donor_Public_Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>