care-australia-uat/force-app/main/default/objects/Donor_Public_Engagement__c/fields/Donor_Public_Engagement_Name__c.field-meta.xml
<CustomField>
    <fullName>Donor_Public_Engagement_Name__c</fullName>
    <formula>Text( Engagement_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Donor Public Engagement Name</label>
    <type>Text</type>
</CustomField>