care-australia-uat/force-app/main/default/objects/Donor_Public_Engagement__c/fields/Engagement_Status__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Status__c</fullName>
    <inlineHelpText>Indicates if ambassadors, speakers and influencers at their 3 different “Engagement stages” with CARE:
Current
Potential
Archived</inlineHelpText>
    <label>Engagement Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Potential</fullName>
            </value>
            <value>
                <fullName>Archived</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>