care-australia-uat/force-app/main/default/objects/Donor_Public_Engagement__c/fields/Engagement_Type__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Type__c</fullName>
    <label>Engagement Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ambassador</fullName>
            </value>
            <value>
                <fullName>Influencer</fullName>
            </value>
            <value>
                <fullName>Speaker</fullName>
            </value>
            <value>
                <fullName>Patron</fullName>
            </value>
            <value>
                <fullName>Board of Directors</fullName>
            </value>
            <value>
                <fullName>Advisory Council</fullName>
            </value>
            <value>
                <fullName>Members of Parliament</fullName>
            </value>
            <value>
                <fullName>DFAT Officials</fullName>
            </value>
            <value>
                <fullName>ACFID Members</fullName>
            </value>
            <value>
                <fullName>Corporate Connections</fullName>
            </value>
            <value>
                <fullName>Major Donors</fullName>
            </value>
            <value>
                <fullName>Other Sector CEOs</fullName>
            </value>
            <value>
                <fullName>Other Key Stakeholders</fullName>
            </value>
            <value>
                <fullName>Petition / Advocacy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>